--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,27 @@ nav a {
   text-decoration: none;
   margin-right: 10px;
 }
+
+.container {
+  padding: 20px;
+}
+
+.product-container {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.product,
+.cart-item {
+  background-color: #fff;
+  padding: 20px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: space-between;
+  object-fit: contain;
+}
