--- a/src/index.css
+++ b/src/index.css
@@ -38,5 +38,41 @@ nav a {
   flex-direction: column;
   gap: 10px;
   justify-content: space-between;
+}
+
+.product img {
   object-fit: contain;
+}
+
+:is(.product, .cart-item) h3 {
+  margin-top: 0;
+}
+
+.cart-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+:is(.product, .cart-item, .total, .thank-you-page) button {
+  background-color: #5cb85c;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #4cae4c;
+  }
+}
+
+.total {
+  text-align: right;
+  margin-top: 20px;
+
+  p {
+    font-size: 18px;
+    font-weight: bold;
+    padding-right: 5px;
+  }
 }
